#********************************************************************************
# Copyright (c) 2022 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[package]
name = "databroker-cli"
version = "0.3.1"
authors = ["Robert Bosch GmbH"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
databroker-proto = { path = "../databroker-proto" }
tonic = "0.6.2"
prost = "0.9.0"
prost-types = "0.9.0"
tokio = { version = "1.17.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
linefeed = "0.6"
ansi_term = "0.12"
clap = { version = "3.1.10", default-features = false, features = [
    "std",
    "env",
    "derive",
] }
regex = "1.6.0"
http = "0.2.8"
