#********************************************************************************
# Copyright (c) 2022, 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[package]
name = "databroker-cli"
version = "0.4.1"
authors = ["Eclipse KUKSA Project"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
common = { path = "../lib"}
kuksa = { path = "../lib/kuksa"}
sdv = { path = "../lib/sdv"}
databroker-proto = { workspace = true }
tonic = { workspace = true, features = ["transport", "channel", "prost"] }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tokio-stream = { workspace = true, features = ["sync"] }
linefeed = "0.6"
ansi_term = "0.12"
clap = { workspace = true, features = [
    "std",
    "env",
    "derive",
] }
regex = "1.6.0"
http = "0.2.8"

[features]
default = ["tls"]
tls = ["tonic/tls"]
