#********************************************************************************
# Copyright (c) 2022 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[package]
name = "databroker-proto"
version = "0.3.1"
authors = ["Robert Bosch GmbH"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
tonic = "0.6.2"
prost = "0.9.0"
prost-types = "0.9.0"

[build-dependencies]
tonic-build = "0.6.2"
