#********************************************************************************
# Copyright (c) 2022 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[package]
name = "databroker-proto"
version = "0.4.0"
authors = ["Robert Bosch GmbH"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
tonic = { workspace = true, features = ["transport", "channel", "codegen", "prost"] }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["transport", "prost"] }
protobuf-src = "1.1.0"
