#********************************************************************************
# Copyright (c) 2022 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[package]
name = "databroker"
version = "0.3.1"
authors = ["Robert Bosch GmbH"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "databroker"
path = "src/lib.rs"

[dependencies]
databroker-proto = { path = "../databroker-proto" }
tonic = "0.6.2"
prost = "0.9.0"
prost-types = "0.9.0"
tokio = { version = "1.17.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tokio-stream = { version = "0.1.8", features = ["sync", "net"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", default-features = false, features = [
    "fmt",
    "env-filter",
    "ansi",
] }
clap = { version = "3.1.10", default-features = false, features = [
    "std",
    "env",
] }
sqlparser = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.0"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7", default-features = false, features = [
    "cargo",
    "git",
] }
