#********************************************************************************
# Copyright (c) 2022, 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[package]
name = "databroker"
version = "0.3.1"
authors = ["Robert Bosch GmbH"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "databroker"
path = "src/lib.rs"

[dependencies]
databroker-proto = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tokio-stream = { workspace = true, features = ["sync", "net"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", default-features = false, features = [
    "fmt",
    "env-filter",
    "ansi",
] }
clap = { workspace = true, default-features = false, features = [
    "std",
    "env",
] }
sqlparser = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.2.0"
regex = "1.7.1"

jemallocator = { version = "0.5.0", optional = true }

[features]
# to enable jemalloc use --features jemalloc
jemalloc = ["dep:jemallocator"]

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7", default-features = false, features = [
    "cargo",
    "git",
] }
