#********************************************************************************
# Copyright (c) 2022, 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[package]
name = "databroker"
version = "0.4.1"
authors = ["Eclipse KUKSA Project"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "databroker"
path = "src/lib.rs"

[dependencies]
kuksa-common = { path = "../lib/common"}
kuksa = { path = "../lib/kuksa"}
databroker-proto = { workspace = true }
tonic = { workspace = true, features = ["transport", "channel", "prost"] }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tokio-stream = { workspace = true, features = ["sync", "net"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", default-features = false, features = [
    "fmt",
    "env-filter",
    "ansi",
] }
clap = { workspace = true, features = [
    "std",
    "env",
    "derive",
] }
sqlparser = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.1.0"
regex = "1.7.1"

jemallocator = { version = "0.5.0", optional = true }
lazy_static = "1.4.0"
thiserror = "1.0.47"

# VISS
axum = { version = "0.6.20", optional = true, features = ["ws"] }
futures = { version = "0.3.28", optional = true }
chrono = { version = "0.4.31", optional = true, features = ["std"] }
uuid = { version = "1.4.1", optional = true, features = ["v4"] }

[features]
default = ["tls"]
tls = ["tonic/tls"]
jemalloc = ["dep:jemallocator"]
viss = ["dep:axum", "dep:chrono", "dep:futures", "dep:uuid"]
libtest = []

[build-dependencies]
anyhow = "1.0"
vergen = { version = "8", features = [
    "cargo",
    "git",
    "gitoxide",
] }

[dev-dependencies]
anyhow = "1.0"
chrono = "^0.4"
cucumber = { version = "0.20", default-features = false, features = ["libtest", "macros"] }

[[test]]
name = "read_write_values"
harness = false
