[workspace]

members = [
    "common",
    "kuksa",
    "sdv"
]

[workspace.dependencies]
databroker-proto = { path = "../databroker-proto" }
# prost has no features
prost = "0.11"
# prost-types has no features
prost-types = "0.11"
# tokio does not enable features by default
tokio = "1.17.0"
# tokio-stream has no features
tokio-stream = "0.1.8"
tonic = { version = "0.9.1", default-features = false }
tonic-build = { version = "0.8", default-features = false }
